--- a/My Website/index.html
+++ b/My Website/index.html
@@ -30,10 +30,10 @@
                 Dropdown
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Actijhjhon</a>
+                <a class="dropdown-item" href="#">Another jihiaction</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#">Selshihe here</a>
               </div>
             </li>
             <li class="nav-item">
@@ -44,6 +44,8 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
+          sfgsfgs
+          sfgsfgsafsef
         </div>
       </nav>
     <h1>Anurag Rani</h1>
