--- a/My Website/index.html
+++ b/My Website/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Anurag Rani</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,17 +23,17 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Student Portal
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Actijhjhon</a>
-                <a class="dropdown-item" href="#">Another jihiaction</a>
+                <a class="dropdown-item" href="#">Scholarship</a>
+                <a class="dropdown-item" href="#">Our Courses</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Selshihe here</a>
+                <a class="dropdown-item" href="#">Fees</a>
               </div>
             </li>
             <li class="nav-item">
@@ -44,11 +44,10 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
-          sfgsfgs
-          sfgsfgsafsef
+        
         </div>
       </nav>
-    <h1>Anurag Rani</h1>
+    <h1>Anurag Rani is studing. Please disturb her.</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
