this is commit 6 with issue1 branch

--- a/newIndex.html
+++ b/newIndex.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is my issue1 branch Title2</title>
+    <title>This is my issue1 branch Title3</title>
 </head>
 <body>
     <h2>Anurag is not studing.</h2>
-    <h3>This is fifth commit.</h3>
+    <h3>This is sixth commit.</h3>
 </body>
 </html>
