this is new commit in master branch

--- a/newIndex.html
+++ b/newIndex.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is my Initial Title</title>
+    <title>This is my new Title</title>
 </head>
 <body>
     <h2>Anurag is not studing.</h2>
-    <h3>This is third commit.</h3>
+    <h3>This is fourth commit in master branch.</h3>
 </body>
 </html>
